Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60812

The inputAccessoryView reserved space is not really hideable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.7.0, 5.8.0, 5.9.0 Beta 3
    • QPA
    • None
    • ipad mini 2 / ios 9 / sdk 10.3
    • iOS/tvOS/watchOS
    • b30ce069922b57656f58c531a5bec614f00a7fda

      The iOS input panel (virtual keyboard) inputAccessoryView reserved space is not hideable despite its supposed support.

      One can require the shortcuts bar to be hidden this way from a input method query:

      platformData[QStringLiteral("hideShortcutsBar")] = true;

      Though the responder ios implementation does workaround a compiler warning and does not respect the apple documentation telling to nil the responder inputAssistantItem.leadingBarButtonGroups and inputAssistantItem.trailingBarButtonGroups properties.

      So you can hide everything in accessory, still the reserved space allocated is never shrink resulting in a top large space unused.

      This is becoming really a problem when one try to implement its own input panel 

      inputView and don't care about accessory.

      I do prefer a (wrong) compiler warning than a wrong behavior and no warning.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            filipe.azevedo Filipe Azevedo
            filipe.azevedo Filipe Azevedo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes